k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: posfiap
  labels:
    app.kubernetes.io/name: posfiap
    app.kubernetes.io/managed-by: kubectl
