k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: posfiap
  labels:
    app.kubernetes.io/name: posfiap
    app.kubernetes.io/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: api
          image: gddarkness/fiap-oficina:latest
          imagePullPolicy: IfNotPresent
          command:
            - uv
            - run
            - uvicorn
            - app.main:app
            - --host
            - "0.0.0.0"
            - --port
            - "8000"
          ports:
            - name: http
              containerPort: 8000
              hostPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
