k8s/newrelic-infrastructure.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: newrelic-infrastructure
  namespace: posfiap
  labels:
    app: newrelic-infrastructure
    app.kubernetes.io/name: newrelic-infrastructure
spec:
  selector:
    matchLabels:
      name: newrelic-infrastructure
  template:
    metadata:
      labels:
        name: newrelic-infrastructure
    spec:
      serviceAccountName: default
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: newrelic-infrastructure
          image: newrelic/infrastructure:latest
          securityContext:
            privileged: true
          resources:
            limits:
              memory: 150Mi
              cpu: 100m
            requests:
              memory: 64Mi
              cpu: 20m
          volumeMounts:
            - mountPath: /host
              name: host-volume
              readOnly: true
            - mountPath: /var/run/docker.sock
              name: host-docker-socket
            - mountPath: /var/run/containerd
              name: host-containerd-socket
              readOnly: true
      volumes:
        - name: host-volume
          hostPath:
            path: /
        - name: host-docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: host-containerd-socket
          hostPath:
            path: /run/containerd
      tolerations:
        - operator: Exists
          effect: NoSchedule
        - operator: Exists
          effect: NoExecute
