k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: posfiap
  labels:
    app.kubernetes.io/name: posfiap
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
        app.kubernetes.io/component: worker
    spec:
      containers:
        - name: worker
          image: gddarkness/fiap-oficina:latest
          imagePullPolicy: IfNotPresent
          command:
            - uv
            - run
            - python
            - -m
            - app.worker
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
