k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: posfiap
  labels:
    app.kubernetes.io/name: posfiap
    app.kubernetes.io/component: api
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30800
