k8s/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: posfiap
  labels:
    app.kubernetes.io/name: posfiap
    app.kubernetes.io/component: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
