k8s/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: posfiap
  labels:
    app.kubernetes.io/name: posfiap
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
